Fix scroll and enter issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@
  */
 
 html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  overflow-y: scroll;
 }
 
 /* Sections
    ========================================================================== */
+
 
 /**
  * Remove the margin in all browsers.
