--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@
  */
 
 html {
-  overflow-y: scroll;
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
    ========================================================================== */
-
 
 /**
  * Remove the margin in all browsers.
